Refactoring completo + fixes críticos de BD y bugs
- pool_pre_ping y pool_recycle en SQLAlchemy (fix definitivo conexión BD)
- utils.py: helpers err(), require_user(), parse_date() compartidos
- auth.py: werkzeug password hashing con migración transparente desde sha256
- crypto_utils.py: eliminar padding frágil de ENCRYPTION_KEY
- auto.py: fix falabella.upload_document() (no existía) → set_invoice_pdf()
- mercadolibre_routes.py: token refresh lazy (solo cuando la API devuelve 401)
- Todos los blueprints: db.session.get() en lugar de Query.get() deprecado
- Error handlers globales: 404/405/500 devuelven JSON
- run-local.sh: detección automática de puerto 5000 ocupado (AirPlay Mac)
- sync_sales.py, semi.py, dashboard.py: rollback explícito en fallos de commit

Made-with: Cursor

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -10,4 +10,6 @@ COPY backend/ .
 
 ENV FLASK_APP=app.app
 EXPOSE 5000
-CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:5000", "app.app:create_app"]
+# 1 worker y timeout 120s para servidores pequeños y para que el arranque (conexión a DB) no haga timeout
+# app.app:app = instancia Flask en app/app.py (no la factory create_app)
+CMD ["gunicorn", "-w", "1", "--timeout", "120", "-b", "0.0.0.0:5000", "app.app:app"]
