--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,9 @@
 # Copiar a .env y completar valores
+# Con Docker (producción): NO pongas DATABASE_URL aquí; docker-compose la define (postgres:postgres@db).
+# Solo para desarrollo local sin Docker: DATABASE_URL=postgresql://user:password@localhost:5432/invoice_automation
 FLASK_APP=app.app
 FLASK_ENV=development
 SECRET_KEY=your-secret-key-change-in-production
-DATABASE_URL=postgresql://user:password@localhost:5432/invoice_automation
 ENCRYPTION_KEY=generate-with-fernet-key.py
 HAULMER_API_BASE=https://docsapi-openfactura.haulmer.com
 FALABELLA_API_BASE=https://api.falabella.com/seller
@@ -11,6 +12,7 @@ FALABELLA_API_BASE=https://api.falabella.com/seller
 # ML_REDIRECT_URI debe ser HTTPS (producción, ngrok o staging).
 ML_CLIENT_ID=
 ML_CLIENT_SECRET=
-ML_REDIRECT_URI=https://tu-dominio.com/mercado-libre/callback
-ML_AUTH_BASE=https://auth.mercadolibre.com.ar
+ML_REDIRECT_URI=https://tu-dominio.com/api/mercado-libre/callback
+# Por país: Chile = auth.mercadolibre.cl , Argentina = auth.mercadolibre.com.ar
+ML_AUTH_BASE=https://auth.mercadolibre.cl
 FRONTEND_URL=http://localhost:3000
